<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="rss_layout_urltext_text">http://news.google.com/?output=rss</string>
    <string name="rss_layout_statustext_text"></string>
    <string name="rss_layout_download_text">下载阅读</string>
    <string name="app_name">MyNode</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_all_user">AllUser</string>
    <string name="title_activity_my_tab_host">MyTabHost</string>
    <string name="title_activity_my_splash">MySplash</string>
    <string name="title_activity_my_login">login</string>
    <string name="login_label_username">用户名</string>
    <string name="login_username_hint">用户名</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登录</string>
    <string name="chat_all_user"></string>
    <string name="title_activity_free_message">FreeMessageActivity</string>
    <string name="title_activity_all_node">AllNode</string>
    <string name="login_getuserid">获取用户唯一标识</string>
    <string name="title_activity_nodetemperature">NodetemperatureActivity</string>
    <string name="title_activity_no_finish">NoFinish</string>
    <string name="no_finish">sorry,还在努力开发中...</string>
    <string name="title_activity_my_setting">MySetting</string>
    <string name="title_activity_rssread">RSS 阅读</string>
    <string name="settings_connection">Connection</string>
    <string name="settings_reconnect_title">Reconnect</string>
    <string name="settings_reconnect_desc">Automatically reconnect on disconnect</string>
    <string name="settings_reconnect_interval_title">Reconnect interval</string>
    <string name="settings_reconnect_interval_desc">Number of minutes between reconnection tries</string>
    <string name="settings_reconnect_interval_dialog_title">Reconnect interval</string>
    <string name="settings_ignore_motd_title">Ignore MOTD</string>
    <string name="settings_ignore_motd_desc">Don\'t show the automatic ‘Message of the Day’ sent by the server</string>
    <string name="settings_chat">Chat</string>
    <string name="settings_icons_title">Show icons</string>
    <string name="settings_icons_desc">Show icons to highlight special events</string>
    <string name="settings_colors_title">Show colors</string>
    <string name="settings_colors_desc">Show colors to highlight special events</string>
    <string name="settings_colors_nick_title">Colorize nicknames</string>
    <string name="settings_colors_nick_desc">Show nicknames in different colors</string>
    <string name="settings_timestamp_title">Show timestamp</string>
    <string name="settings_timestamp_desc">Prefix all messages with a timestamp</string>
    <string name="settings_24h_title">24 hour format</string>
    <string name="settings_24h_desc">Use 24 hour format for timestamps</string>
    <string name="settings_include_seconds_title">Show seconds</string>
    <string name="settings_include_seconds_desc">Include seconds in timestamps</string>
    <string name="settings_highlight">Highlight</string>
    <string name="settings_sound_highlight_title">Play sound on highlight</string>
    <string name="settings_sound_highlight_desc">Play sound when your nick is mentioned</string>
    <string name="settings_vibrate_highlight_title">Vibrate on highlight</string>
    <string name="settings_vibrate_highlight_desc">Vibrate when your nick is mentioned</string>
    <string name="settings_led_highlight_title">Flash LED on highlight</string>
    <string name="settings_led_highlight_desc">Flash LED light when your nick is mentioned</string>
    <string name="settings_misc">Misc</string>
    <string name="settings_quitmessage_title">Quit message</string>
    <string name="settings_quitmessage_desc">Message to show when you disconnect</string>
    <string name="settings_quitmessage_dialog_title">Quit message</string>
    <string name="settings_quitmessage_dialog_desc">Message to show when you disconnect:</string>
    <string name="settings_fontsize_title">Font size</string>
    <string name="settings_fontsize_desc">Set the global font size</string>
    <string name="settings_fontsize_dialog_title">Font size</string>
    <string name="settings_voice_recognition_title">Voice recognition</string>
    <string name="settings_voice_recognition_desc">Show button for voice recognition</string>
    <string name="settings_joinpartquit_title">Show join, part and quit</string>
    <string name="settings_joinpartquit_desc">Show join, part and quit messages in channels</string>
    <string name="settings_noticeserverwindow_title">Notices server window</string>
    <string name="settings_noticeserverwindow_desc">Show notices in server window</string>
    <string name="settings_mirc_colors_title">Show message colors</string>
    <string name="settings_mirc_colors_desc">Show mIRC colors in messages</string>
    <string name="settings_graphical_smilies_title">Show graphical smilies</string>
    <string name="settings_graphical_smilies_desc">Text smilies will be displayed as images in chat</string>
    <string name="settings_autocorrect_text_title">Autocorrect input</string>
    <string name="settings_autocorrect_text_desc">Use dictionary to autocorrect typed text in chat</string>
    <string name="settings_autocap_sentences_title">Auto-capitalize sentences</string>
    <string name="settings_autocap_sentences_desc">Automatically capitalize the first word of sentences</string>
    <string name="settings_ime_extract_title">Fullscreen input in landscape</string>
    <string name="settings_ime_extract_desc">Use fullscreen keyboard when in landscape mode</string>
    <string name="settings_history_size_title">History size</string>
    <string name="settings_history_size_desc">Number of lines of conversation history to keep</string>
    <string name="settings_debug_traffic_title">Debug IRC traffic</string>
    <string name="settings_debug_traffic_desc">Log IRC traffic to the verbose log. This may be a security risk!</string>
    <string name="minute_1">1 minute</string>
    <string name="minutes_5">5 minutes</string>
    <string name="minutes_10">10 minutes</string>
    <string name="minutes_15">15 minutes</string>
    <string name="minutes_20">20 minutes</string>
    <string name="minutes_30">30 minutes</string>
    <string name="title_activity_special_node_light">SpecialNodeLight</string>
    <string name="title_activity_online_update">OnlineUpdate</string>
    <string name="onlineupdate_current_tip">当前版本：</string>
    <string name="onlineupdate_last_tip">最新版本：</string>
    <string name="onlineupdate_get_version">获取最新版本信息</string>
    <string name="onlineupdate_sure_to_update">确定升级</string>
    <string name="title_activity_company_main">CompanyMainActivity</string>
    <string name="title_activity_company_device_main">CompanyDeviceMainActivity</string>

</resources>