<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:padding="10dip"
    android:orientation="vertical">

	<EditText android:id="@+id/urltext"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textSize="12sp"
	    android:autoText="false"
	    android:capitalize="none"
	    android:text="@string/rss_layout_urltext_text" />
	
	<Button android:id="@+id/download"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
		android:text="@string/rss_layout_download_text" />
	
	<TextView android:id="@+id/statustext"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:autoText="false"
	    android:capitalize="none"
	    android:textSize="12sp"
	    android:text="@string/rss_layout_statustext_text" />
	
	<ListView android:id="@android:id/list"
	    android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"
	    android:drawSelectorOnTop="false"/>
    
</LinearLayout>
