<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OnlineUpdate" >

    <TextView   
            android:id="@+id/textview_onlineupdate_current_tip"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_alignParentTop="true"  
            android:layout_marginTop="10dp"  
            android:text="@string/onlineupdate_current_tip"  />  
            
    <TextView   
            android:id="@+id/textview_onlineupdate_current"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:text="001"
            android:layout_below="@+id/textview_onlineupdate_current_tip"
            android:layout_marginTop="10dp"   />  
            
            
    <TextView   
            android:id="@+id/textview_onlineupdate_last_tip"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_marginTop="10dp"  
            android:layout_below="@+id/textview_onlineupdate_current"
            android:text="@string/onlineupdate_last_tip"  />  
            
    <TextView   
            android:id="@+id/textview_onlineupdate_last"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_marginTop="10dp"  
            android:text="******"
            android:layout_below="@+id/textview_onlineupdate_last_tip" />     
    <TextView   
            android:id="@+id/textview_onlineupdate_changelog"  
            android:layout_width="fill_parent"  
            android:layout_marginTop="10dp"  
            android:layout_height="200dp"
            android:scrollbars="vertical"     
            android:maxLines="15"   
            android:maxHeight="200dp"         
            android:textColor="#667788" 
            android:text="修改记录"
            android:layout_below="@+id/textview_onlineupdate_last" />      
            
    <Button   
            android:id="@+id/button_onlineupdate_get_version_info"  
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content"  
            android:layout_marginTop="10dp" 
            android:layout_below="@id/textview_onlineupdate_changelog"   
            android:text="@string/onlineupdate_get_version"/>
    
    <Button   
            android:id="@+id/button_onlineupdate_sure_to_update"  
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content"  
            android:layout_marginTop="10dp" 
            android:layout_below="@id/button_onlineupdate_get_version_info"   
            android:text="@string/onlineupdate_sure_to_update"/>

</RelativeLayout>